# nespp

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  bootstrap_raylib.sloth  cmake.sloth  configure.sloth  debug-binary.sloth  debug-rom-prg.sloth  disassemble  iwyu.sloth  main.cpp  rom.cpp  rom.hpp  yolo-make
include/: address.h  debug.h  instructions.h  rom.h  rom.hpp  vm.h  word.h
lib/: address.cpp  debug.cpp  instructions.cpp  rom.cpp  vm.cpp  word.cpp
test/01/: Makefile  config.cfg  main.asm
test/02/: config.cfg  main.asm  make
